@startuml

class Groupe{
    thème : chaîne
    description : chaîne
}

abstract class Utilisateur{
    mail : chaîne {key}
    resume : chaîne
    dateInscription : date
    {field}nationalité : chaîne(2)
    photo : chaîne
}

class Personne{
    pseudo : chaîne {key}
    nom : chaine
    prenom : chaîne
    dateNaiss : date
    {field} sexe : genre
    employeur : chaîne
}

class Entreprise{
    raisonSociale : chaine {key}
    adresse : chaîne
    dateCréation : date
    siteWeb : chaîne
    catégorie : categorie
}

package "Enumeration (chaînes)" <<frame>> {
    enum categorie <<enumeration>> {
        MIC
        PME
        ETI
        GE
    }

    enum genre <<enumeration>>{
        Homme
        Femme
        Autre
    }
}
note left of Utilisateur
    Un Utilisateur est soit une Personne,
    soit une Entreprise.
end note

class Message {
    datePublication : date
    contenu : chaîne
}

Personne --|> Utilisateur
Entreprise --|> Utilisateur

Groupe *-- "*" Groupe
Groupe *-- "*" Message
Groupe "*" --* Utilisateur

@enduml
